--- a/examples/src/main/resources/log4j.properties
+++ b/examples/src/main/resources/log4j.properties
@@ -9,3 +9,4 @@ log4j.logger.org.eclipse.jetty=WARN
 log4j.logger.varys.framework.NioDataServer=DEBUG
 log4j.logger.varys.framework.network=ALL
 #log4j.logger.varys.framework.client=DEBUG
+log4j.logger.varys.framework.master=ALL
